tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_module__discover_flags_r_t_e_g_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - "module::discover"
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
module::discover
 - crate::constants::ATTR_CFG
 - crate::constants::LIB_FILE_NAME
 - crate::constants::MAIN_FILE_NAME
 - crate::constants::MODULE_FILE_NAME
 - crate::constants::MODULE_NAME_TEST

----- stderr -----
